--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,12 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+html, body {
+  height: 100%;
+  width: 100%;
+}
+#root {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
