可以连续跳了

--- a/src/components/Block/index.css
+++ b/src/components/Block/index.css
@@ -2,4 +2,8 @@
     height: 80px;
     width: 80px;
     background-color: red;
+    float: left;
+}
+.block:first-child {
+    margin-left: 0 !important;
 }
